syntax = "proto3";
package auth;
option go_package = "github.com/aquaheyday/go-auth-server/proto";

service AuthService {
  rpc SendVerification(SendVerificationReq) returns (SendVerificationRes);
  rpc VerifyCode(VerifyCodeReq) returns (VerifyCodeRes);
  rpc SignUp(SignUpReq) returns (SignUpRes);
}

message SendVerificationReq { string email = 1; }
message SendVerificationRes { string message = 1; }

message VerifyCodeReq  { string email = 1; string code = 2; }
message VerifyCodeRes { bool ok = 1; }

message SignUpReq {
  string email = 1;
  string password = 2;
  string code = 3;
}
message SignUpRes { string user_id = 1; }